--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                         
                         <a href="https://github.com/b4bentley"><img src="assets/images/github.png" alt="github" style="width:60px; height:60px;"></a>
                         <a href="https://www.linkedin.com/in/brent-bentley-88558241"><img src="assets/images/linkedin.png" alt="linkedin" style="width:60px; height:60px;"></a>
-                        <a href="https://my.playstation.com/b4bentley"><img src="assets/images/playstation.png" alt="playstation" style="width:60px; height:60px;"></a>
+                        <a href="http://stackoverflow.com/users/6523895/b4bentley"><img src="assets/images/stack.png" alt="stack" style="width:60px; height:60px;"></a>
 
                     </div>
 
