hover and bug fixes

--- a/contact.html
+++ b/contact.html
@@ -46,11 +46,11 @@
                     <form class="form">
                     
                         <div class="formContent">Name</div>       
-                        <input class="formContent" type="text" name="name" placeholder="John Smith" style="width:100%; color: #c0b8ae; border: solid 1px #c0b8ae; padding-left: 10px;">
+                        <input class="formContent" type="text" name="name" placeholder="John Smith" style=" width: 97.5%;color: #c0b8ae; border: solid 1px #c0b8ae; padding-left: 10px;">
                         <div class="formContent">Email</div>
-                        <input class="formContent" type="text" name="email" placeholder="example@gmail.com" style="width:100%; color: #c0b8ae; border: solid 1px #c0b8ae; padding-left: 10px;">
+                        <input class="formContent" type="text" name="email" placeholder="example@gmail.com" style="width:97.5%; color: #c0b8ae; border: solid 1px #c0b8ae; padding-left: 10px;">
                         <div class="formContent">Message</div>
-                        <textarea rows="10" class="formContent"  name="message" style="width:100%; color: #c0b8ae; border: solid 1px #c0b8ae; padding-left:10px; " ></textarea> 
+                        <textarea rows="10" class="formContent"  name="message" style="width:97.5%; color: #c0b8ae; border: solid 1px #c0b8ae; padding-left:10px; " ></textarea> 
                         <div class="formContent">
                             <button class="button" type="button" style="background-color:#4aaaa5;">Submit</button>
                         </div>
@@ -67,9 +67,9 @@
 
                 <div class="links">
 
-                    <a href="https://github.com/b4bentley"><img src="assets/images/github.png" alt="github" style="width:60px; height:60px;"></a>
-                    <a href="https://www.linkedin.com/in/brent-bentley-88558241"><img src="assets/images/linkedin.png" alt="linkedin" style="width:60px; height:60px;"></a>
-                    <a href="http://stackoverflow.com/users/6523895/b4bentley"><img src="assets/images/stack.png" alt="stack" style="width:60px; height:60px;"></a>
+                    <a href="https://github.com/b4bentley" target='_blank'><img src="assets/images/github.png" alt="github" style="width:60px; height:60px;"></a>
+                    <a href="https://www.linkedin.com/in/brent-bentley-88558241" target='_blank'><img src="assets/images/linkedin.png" alt="linkedin" style="width:60px; height:60px;"></a>
+                    <a href="http://stackoverflow.com/users/6523895/b4bentley" target='_blank'><img src="assets/images/stack.png" alt="stack" style="width:60px; height:60px;"></a>
 
                 </div>
 
