--- a/index.html
+++ b/index.html
@@ -46,13 +46,17 @@
 
 						<div class="para">
 
-							<img class="profilePic" alt="profilePic" src="assets/images/profilePic.jpg" style="width:350px; height:35p0x;">
+							<img class="profilePic" alt="profilePic" src="assets/images/profilePic.jpg" style="width:350px; height:350px;">
 
 							<p>Welcome and get lost in my online portfolio. Here I will be updating all the skills and projects that I have had the pleasure to develop along the way. This passion started as a hobby back in 2009 as an undergraduate and now it has turned into a reachable dream.</p>
 							<br>
-							<p>Some brief information, I graduated with a Bachelors Degree in Computer Science back in 2013. I am currently employed by Lake County Public Safety as a Data Technician. I eventually would love to become a front or back end web developer in the coming months.</p> 
+							<p>Some brief information, I graduated with a Bachelors Degree in Computer Science back in 2013. I am currently employed by Lake County Public Safety as a Data Technician. Eventually I would love to become a front or back end web developer in the coming months.</p> 
 							<br>
-							<p>Some interesting facts about myself:  afforded the opportunity to travel all across the world as a military child, video game enthusiast (PS4 currently), MTG, OKLAHOMA SOONER fan (BOOMER SOONER), and  a Russian Tortoise owner.</p>
+                            
+                            <img class="profilePic2" alt="profilePic" src="assets/images/george.jpg" style="width:400px; height:200px;">
+                            <br>
+                            <br>
+							<p>Some interesting facts about myself: afforded the opportunity to travel all across the world as a military child, video game enthusiast (PS4 currently), MTG, OKLAHOMA SOONER fan (BOOMER SOONER), and  a Russian Tortoise owner.</p>
 
 						</div>
 
@@ -66,9 +70,9 @@
 
 					<div class="links">
 
-						<a href="https://github.com/b4bentley"><img src="assets/images/github.png" alt="github" style="width:60px; height:60px;"></a>
-						<a href="https://www.linkedin.com/in/brent-bentley-88558241"><img src="assets/images/linkedin.png" alt="linkedin" style="width:60px; height:60px;"></a>
-						<a href="http://stackoverflow.com/users/6523895/b4bentley"><img src="assets/images/stack.png" alt="stack" style="width:60px; height:60px;"></a>
+						<a href="https://github.com/b4bentley" target='_blank'><img src="assets/images/github.png" alt="github" style="width:60px; height:60px;"></a>
+						<a href="https://www.linkedin.com/in/brent-bentley-88558241" target='_blank'><img src="assets/images/linkedin.png" alt="linkedin" style="width:60px; height:60px;"></a>
+						<a href="http://stackoverflow.com/users/6523895/b4bentley" target='_blank'><img src="assets/images/stack.png" alt="stack" style="width:60px; height:60px;"></a>
 
 					</div>
 
