add form submission

--- a/contact.html
+++ b/contact.html
@@ -43,7 +43,8 @@
 
                 <div class="about">Contact</div>
 
-                    <form class="form">
+                    <form class="form" action="https://formspree.io/bentleybrent@icloud.com"
+      method="POST">
                     
                         <div class="formContent">Name</div>       
                         <input class="formContent" type="text" name="name" placeholder="John Smith" style=" width: 97.5%;color: #c0b8ae; border: solid 1px #c0b8ae; padding-left: 10px;">
