--- a/contact.html
+++ b/contact.html
@@ -53,7 +53,7 @@
                         <div class="formContent">Message</div>
                         <textarea rows="10" class="formContent"  name="message" style="width:97.5%; color: #c0b8ae; border: solid 1px #c0b8ae; padding-left:10px; " ></textarea> 
                         <div class="formContent">
-                            <button class="button" type="submit" value="submit" style="background-color:#4aaaa5;">Submit</button>
+                            <button class="button" type="submit" value="submit" target='_blank' style="background-color:#4aaaa5;">Submit</button>
                         </div>
 
                     </form>
